# typelib

./: .boring  .gitignore  CHANGELOG.rst  CHANGES  CMakeLists.txt  Doxyfile  Doxyfile.in  INSTALL  Init.make.in  Makefile  Makefile.clang-format  Makefile.in  README  README.txt  SConstruct  TODO  acinclude.m4  autogen.sh  configset.hh  configure.ac  configure.in  install-sh  manifest.xml  mkinstalldirs  package.xml  stdc++.h  typelib-config.h.in  typelib.pc.in  wrapper_fwd.hh
bindings/ruby/: .gitattributes  CMakeLists.txt  Makefile.in  README.txt  typelib_ruby.pc.in
bindings/ruby/benchmark/: main.rb
bindings/ruby/ext/: CMakeLists.txt  Makefile.in  array.hh  compound.hh  convert.cc  enum.hh  extconf.rb.in  functions.cc  memory.cc  metadata.cc  registry.cc  registry.hh  ruby-dl.hh  specialized_types.cc  string.hh  strings.cc  tools.hh  type.hh  typelib.hh  typelib_api.cc  typelib_ruby.cc  typelib_ruby.hh  value.cc  value.hh  visitors.hh
bindings/ruby/lib/: typelib-gccxml.rb  typelib.rb
lang/cimport/: CMakeLists.txt  CPPDictionary.hh  CPPSymbol.hh  Dictionary.cc  Dictionary.hh  Makefile.in  Support.cc  cimporter.cc  cimporter.hh  containers.cc  containers.hh  cparser.g  import.cc  import.hh  packing.cc  packing.hh  plugin.cc  standard_types.cc  standard_types.hh  typesolver.cc  typesolver.hh
lang/cimport/packing/: build_packing_info.tcc  check_arrays.tcc  check_size_criteria.tcc  check_struct_in_struct.tcc  tools.tcc
test/: CMakeLists.txt  Makefile.in  idl_export.h  idl_export.idl  rflex.tlb  test_cimport.1  test_cimport.h  test_cimport.tlb  test_containers.cc  test_display.cc  test_lang_c.cc  test_lang_tlb.cc  test_marshalling.cc  test_memory_layout.cc  test_model.cc  test_plugin.cc  test_registry.cc  test_typebuilder.cc  test_value.cc  test_value_ops_init.cc  testsuite.cc  testsuite.hh.in
test/data/: laser.h  laser.idl  laser_blobs.idl  nested_types.h  posterLib.h  stdheaders.h  test_idl.h  test_idl.idl  test_idl_prefix_suffix.idl  test_underscores.h  test_underscores.idl
test/data/nested_types/: enum_in_struct.h  struct_in_struct.h
test/ruby/: CMakeLists.txt  Makefile.in  container_memory_leak_on_resize.rb  cxx_common_tests.rb  cxx_gccxml_common.rb  cxx_test_helpers.rb  cxx_tlbgen.in  extconf.rb.in  runner.in  suite_cxx.rb  test_accessor.rb  test_array_type.rb  test_compound_type.rb  test_config.rb.in  test_container_type.rb  test_cxx.rb  test_cxx_castxml.rb  test_cxx_clang.rb  test_cxx_gccxml.rb  test_dl.rb  test_enum_type.rb  test_functions.rb  test_idl.rb  test_marshalling.rb  test_memory_management.rb  test_metadata.rb  test_numeric_type.rb  test_path.rb  test_rb_value.cc  test_rb_value.rb  test_registry.rb  test_registry_export.rb  test_specializations.rb  test_specialized_types.rb  test_std_vector.rb  test_std_vector_basic_types.rb  test_tlb.rb  test_type.rb  test_typelib.rb  test_typelib_gccxml.rb  (+1 more)
test/ruby/attic/: memory_management.rb
test/ruby/benchmark/: bench_values.csv  bench_values.rb  helpers.rb
test/ruby/cxx_import_tests/: .gitignore  NamedVector.hh  NamedVector.tlb  NamedVector.tlb.castxml  NamedVector.tlb.gccxml  arrays.hh  arrays.tlb  attribute_packed.tlb  bug_opaque_import.hh  classes.hh  classes.opaques  classes.tlb  compound_with_pair.tlb  consts.hh  consts.tlb  consts.tlb.gccxml  documentation_metadata_tags.h  documentation_utf8.h  documentation_with_space_between_struct_and_opening_bracket.h  documentation_with_struct_and_opening_bracket_on_the_same_line.h  empty_base_class.hh  empty_base_class.tlb  enums.hh  enums.tlb  examples.tlb  forward_declaration.tlb  ignored_base_class.h  laser.hh  laser.tlb  namespaces.tlb  namespaces.xml  negative.tlb  negative.tlb.castxml  negative.tlb.gccxml  negative_integers_as_template_arguments.hh  negative_integers_as_template_arguments.tlb  nested_records.tlb  nested_type.hh  nested_type.tlb  nested_type_of_template.hh  (+22 more)
test/ruby/gccxml_import_tests/: documentation_with_struct_and_opening_bracket_on_different_lines.h
test/ruby/tlb_import_tests/: templates.expected
tools/: CMakeLists.txt  Makefile.in  cimportplugin.cc  cimportplugin.hh  genom.cc  genom.cpp  genom.h  genom.hh  import.cc  import.cpp  import.h  import.hh  inspect.cc  inspect.cpp  inspect.h  inspect.hh  mode.cc  mode.cpp  mode.hh  plugin.cc  plugin.cpp  plugin.h  plugin.hh  preprocess.cc  preprocess.cpp  tlbimportplugin.cc  tlbimportplugin.hh  typelib.cc  typelib.cpp
tools/tlbBuilder/: CMakeLists.txt  Extractor.cpp  FindDL.cmake  TypelibBuilder.cpp  TypelibBuilder.hpp  main.cpp
tools/tlbBuilder/test-header-data/: arrays.h  arrays.tlb  attribute_packed.h  attribute_packed.tlb  bitfield.tlb  classes.h  classes.tlb  enums.h  enums.tlb  examples.tlb  forward_declaration.tlb  laser.tlb  namespaces.h  namespaces.tlb  negative.h  negative.tlb  nested_records.h  nested_records.tlb  posterLib.tlb  stdheaders.tlb  stdvector.h  stdvector.tlb  strings.h  templates.h  templates.tlb  test_idl.tlb  typedefs.h  typedefs.tlb
tools/tlbMerger/: CMakeLists.txt  main.cpp
tools/typelib-clang-tlb-importer/: CMakeLists.txt  HandleMetaData.cpp  HandleMetaData.hpp  IgnoredOrRenamedTypes.cpp  IgnoredOrRenamedTypes.hpp  NamingConversions.cpp  NamingConversions.hpp  TypelibBuilder.cpp  TypelibBuilder.hpp  main.cpp
tools/typelib-clang-tlb-importer/test/: CMakeLists.txt  NamedVector.tlb  arrays.hh  arrays.tlb  attribute_packed.hh  attribute_packed.tlb  bitfield.tlb  classes.h  (+41 more)
tools/typelib-tlb-merger/: CMakeLists.txt  typelib-tlb-merger.cpp
typelib/: CMakeLists.txt  Makefile.in  SConscript  csvoutput.cc  csvoutput.hh  endian_swap.hh  endianness.cc  endianness.hh  exporter.cc  exporter.hh  importer.cc  importer.hh  inspect.cpp  ioplugins.cc  ioplugins.hh  manip.hh  marshalling.cc  marshalling.hh  memory_layout.cc  memory_layout.hh  normalized_numerics.hh  packing.cc  packing.cpp  packing.h  packing.hh  parsing.h  pluginmanager.cc  pluginmanager.hh  plugins.hh  registry.cc  registry.cpp  registry.h  registry.hh  registryiterator.hh  type.cc  type.cpp  type.h  type.hh  typebuilder.cc  typebuilder.cpp  (+20 more)
typelib/utilmm/: configset.cc  configset.hh  use.hh
(+195 files in other folders)
