dnl autoconf script for portLib/comLib (aka pocolibs)
dnl
dnl Copyright (c) 2004 
dnl      Autonomous Systems Lab, Swiss Federal Institute of Technology.
dnl Copyright (c) 2003-2004 CNRS/LAAS
dnl
dnl GPL, since some parts were copied from other configure.in
dnl 
dnl $LAAS: configure.in,v 1.26 2004/09/14 11:01:03 mallet Exp $
dnl
AC_INIT(config.h.in)
AC_PREREQ(2.13)

AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_CXX
if test "x${GCC}" = "xyes"; then
  CFLAGS="${CFLAGS} -Wall"
fi

PACKAGE=typelib
VERSION=2.0
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL

dnl add -ldl if needed 
if test -n "$lt_cv_dlopen_libs" ; then
	LIBS=$lt_cv_dlopen_libs
fi

AC_PROG_INSTALL

AC_PATH_PROG(MKDEP, mkdep, no, $prefix/bin:$exec_prefix/bin:$PATH)
if [ test "x$MKDEP" = "xno" ]; then
  AC_MSG_ERROR([mkdep is needed to build pocolibs])
fi

dnl *********************************************************************
dnl Precompiled headers (gcc 3.4 only)
AC_ARG_WITH(pch,
           AC_HELP_STRING([--with-pch=header.h], [use precompiled headers]),
                [pch=$withval],[pch=no])
if ! test "x$pch" = "xno"; then
    USE_PCH=1
    PCH_HEADER=$pch

    AC_MSG_RESULT(using $pch as precompiled header)
fi
AC_SUBST(USE_PCH)
AC_SUBST(PCH_HEADER)


dnl *********************************************************************
dnl Debugging options 

AC_ARG_ENABLE(debug,
           [AC_HELP_STRING([--enable-debug=full yes no], [compile with debug info])],
                [debug=$enableval],[debug=no])
if test "x$debug" = "xfull"; then
    CFLAGS="${CFLAGS} -g3 -O0"
    AC_MSG_RESULT([building with full debug info: -g3 -O0])
elif test "x$debug" = "xyes"; then
    CFLAGS="${CFLAGS} -g -O1"
    AC_MSG_RESULT([building with debug info: -g -O1])
elif test "x$debug" = "xno"; then
    CFLAGS="${CFLAGS}"
    AC_MSG_RESULT([building without debug mode: -g -O2])
fi

dnl --- Make makefiles --------------------------------------------------

AC_CONFIG_HEADER(config.h)
AC_CONFIG_FILES(
    Init.make
	  Makefile
    grammar/Makefile
    typesolver/Makefile
)

AC_OUTPUT

