<package>
  <name>typelib</name>
  <version>2.9.0</version>
  <description>
      This library offers an introspection mechanism for C/C++ value-types. I.e.
      it offers a way to represent types, and to manipulate in-memory values
      that are instances of those types.

      A Ruby binding is included, which gives a fast and transparent
      modification of C/C++ in-memory types from Ruby.
  </description>
  <author>Sylvain Joyeux/sylvain.joyeux@m4x.org</author>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>
  <license>CeCILL-B (BSD-like)</license>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <run_depend>catkin</run_depend>

  <!-- typelib depends on onle one of these optional libraries
       the user has to choose which one to use and install it manually
    <build_depend>clang-3.4</build_depend>
    <run_depend>clang-3.4</run_depend>
    <build_depend>castxml</build_depend>
    <run_depend>castxml</run_depend>
    <build_depend>gccxml</build_depend>
    <run_depend>gccxml</run_depend>
  -->
  <build_depend>gccxml</build_depend>
  <run_depend>gccxml</run_depend>

  <build_depend>utilrb</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>facets</build_depend>
  <build_depend>libxml2</build_depend>
  <build_depend>ruby</build_depend>

  <run_depend>utilrb</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>facets</run_depend>
  <run_depend>libxml2</run_depend>
  <run_depend>ruby</run_depend>

  <export>
    <build_type>
      cmake
    </build_type>
  </export>

</package>

