<package format="3">
  <name>typelib</name>
  <version>1.1.1</version>
  <description>
      This library offers an introspection mechanism for C/C++ value-types. I.e.
      it offers a way to represent types, and to manipulate in-memory values
      that are instances of those types.

      A Ruby binding is included, which gives a fast and transparent
      modification of C/C++ in-memory types from Ruby.
  </description>
  <author>Sylvain Joyeux/sylvain.joyeux@m4x.org</author>
  <maintainer email="orocos-dev@orocos.org">Orocos Developers</maintainer>
  <license>CeCILL-B (BSD-like)</license>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <!-- typelib depends on only one of these optional libraries
       the user has to choose which one to use and install it manually
    <depend>clang-3.4</depend>
    <depend>castxml</depend>
    <depend>gccxml</depend>
  -->
  <depend>gccxml</depend>

  <depend>boost</depend>
  <depend>facets</depend>
  <depend>libxml2</depend>
  <depend>ruby-backports</depend>
  <depend>ruby-dev</depend>
  <depend>utilrb</depend>

  <export>
    <build_type>
      cmake
    </build_type>
  </export>

</package>
